<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:baselineAligned="false"
    tools:context="com.example.heavell.pruebaconcurso.TiposCerveza">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/Scrvcerv"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.11"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/btsmiguel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/sanmiguel"
                android:drawableStart="@drawable/sanmiguel"
                android:text="@string/smiguel"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btheineken"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/heineken"
                android:drawableStart="@drawable/heineken"
                android:text="@string/heineken"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btamstel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/amstel"
                android:drawableStart="@drawable/amstel"
                android:text="@string/amstel"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btcruzcampo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cruzcampo"
                android:drawableStart="@drawable/cruzcampo"
                android:text="@string/cruzcampo"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btalhambra"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/alhambra"
                android:drawableStart="@drawable/alhambra"
                android:text="@string/alhambra"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btbudweiser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/budweiser"
                android:drawableStart="@drawable/budweiser"
                android:text="@string/budweiser"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btpaulaner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/paulanerhefe"
                android:drawableStart="@drawable/paulanerhefe"
                android:text="@string/paulaner"
                android:onClick="setCantidadLiquido"/>
            <Button
                android:id="@+id/btegalicia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/estrellagalicia"
                android:drawableStart="@drawable/estrellagalicia"
                android:text="@string/egalicia"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btpilsener"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_launcher"
                android:drawableStart="@mipmap/ic_launcher"
                android:text="@string/pilsener"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btvoldam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/volldamm"
                android:drawableStart="@drawable/volldamm"
                android:text="@string/voldam"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btguinnes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/guinnessbeer"
                android:drawableStart="@drawable/guinnessbeer"
                android:text="@string/guinnes"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btmurphys"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/murphysred"
                android:drawableStart="@drawable/murphysred"
                android:text="@string/murphys"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btcoronita"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/coronita"
                android:drawableStart="@drawable/coronita"
                android:text="@string/coronita"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btmahou"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/mahou"
                android:drawableStart="@drawable/mahou"
                android:text="@string/mahou"
                android:onClick="setCantidadLiquido"/>

            <Button
                android:id="@+id/btjudas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/judas"
                android:drawableStart="@drawable/judas"
                android:text="@string/judas"
                android:onClick="setCantidadLiquido"/>
            <Button
                android:id="@+id/btcarlsberg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/carlsberg"
                android:drawableStart="@drawable/carlsberg"
                android:text="@string/carlsberg"
                android:onClick="setCantidadLiquido"/>
            <Button
                android:id="@+id/btdesperados"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/desperados"
                android:drawableStart="@drawable/desperados"
                android:text="@string/desperados"
                android:onClick="setCantidadLiquido"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
