<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".DatosUsuario"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-50dp"/>

    <Spinner
        android:id="@+id/spBanderas"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:layout_gravity="center"/>

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rmale"
            android:checked="true"
            android:text="@string/male"
            android:layout_gravity="center"/>

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rfemale"
        android:text="@string/female"
        android:layout_gravity="end"
        android:checked="false"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="#000000"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/weightDefault"
            android:background="@android:color/white"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:id="@+id/et1"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/sb1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:progress="50"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:layout_marginTop="50dp"/>
</LinearLayout>
