<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.heavell.pruebaconcurso.ResumenBebidas">

    <TextView
        android:layout_gravity="center"
        android:text="@string/cuadroresumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"/>

    <!---Hay que ver si finalmente usamos el Scroll-->
    <ScrollView
        android:layout_width="297dp"
        android:layout_height="250dp"
        android:id="@+id/svResumen"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvResumen"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:id="@+id/btAdd"
        android:layout_marginTop="15dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/simbolomas"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"/>

    <Button
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_resultado"
        android:id="@+id/btResultado"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

</LinearLayout>
